--- a/http-filter-example/envoy-sample-config.yaml
+++ b/http-filter-example/envoy-sample-config.yaml
@@ -45,7 +45,7 @@ static_resources:
             typed_config:
               "@type": type.googleapis.com/sample.Decoder
               key: header-processing
-              val: "set-header x-forwarded-proto https"
+              val: "http-request set-header x-forwarded-proto https"
               extra: "123456" # experiment with an additional value
           - name: envoy.filters.http.router
             typed_config:
