implemented conditions with mock bool values
Signed-off-by: Ubuntu <ubuntu@ip-10-128-172-195.ec2.internal>

--- a/header-rewrite-filter/envoy-sample-config.yaml
+++ b/header-rewrite-filter/envoy-sample-config.yaml
@@ -47,9 +47,9 @@ static_resources:
               key: header-processing
               val: |
                   http set-bool mock_bool matches -m str matches
-                  http-request set-path mockpath
-                  http-request set-header x-forwarded-proto https
-                  http-response set-header mock_key mock_val1 mock_val2
+                  http-request set-path mockpath if not A
+                  http-request set-header x-forwarded-proto https if A and B and C
+                  http-response set-header mock_key mock_val1 mock_val2 if not A
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
