added unit tests for set-bool, set-header, set-path processors
Signed-off-by: Ubuntu <ubuntu@ip-10-128-172-195.ec2.internal>

--- a/header-rewrite-filter/BUILD
+++ b/header-rewrite-filter/BUILD
@@ -75,3 +75,13 @@ envoy_cc_test(
         "@envoy//test/integration:http_integration_lib",
     ],
 )
+
+envoy_cc_test(
+    name = "header_processor_test",
+    srcs = ["header_processor_test.cc"],
+    repository = "@envoy",
+    deps = [
+        ":header_rewrite_processor_lib",
+         "@envoy//test/integration:http_integration_lib",
+    ]
+)
