implement dynamic values
Signed-off-by: Ubuntu <ubuntu@ip-10-128-172-195.ec2.internal>

--- a/header-rewrite-filter/BUILD
+++ b/header-rewrite-filter/BUILD
@@ -62,6 +62,7 @@ envoy_cc_library(
     hdrs = ["utility.h",],
     repository = "@envoy",
     deps = [
+        "@envoy//source/common/http:status_lib",
         "@envoy//source/extensions/filters/http/common:pass_through_filter_lib",
     ],
 )
