--- a/header-rewrite-filter/envoy-sample-config.yaml
+++ b/header-rewrite-filter/envoy-sample-config.yaml
@@ -46,9 +46,9 @@ static_resources:
               "@type": type.googleapis.com/envoy.extensions.filters.http.HeaderRewrite
               key: header-processing
               val: |
-                  http set-bool mock_bool matches -m str matches
+                  http set-bool mock_bool matches -m str matche
                   http set-bool another_mock_bool no-match -m str matches
-                  http-request set-path mockpath if not another_mock_bool
+                  http-request set-path mockpath if not mock_bool and not mock_bool
                   http-request append-header key value1 value2 value3 if not mock_bool or another_mock_bool or not another_mock_bool
                   http-request set-header x-forwarded-proto https if mock_bool and mock_bool or not mock_bool
           - name: envoy.filters.http.router
